# fiedler-ensemble-algebraic-redistricting

./: .gitignore  README.md  pyproject.toml
docs/specs/: 2026-04-28-gerrymandering-detection-design.md
gerrydetect/: __init__.py  analysis.py  contiguity.py  data.py  data_mggg.py  diagnostics.py  graph.py  mcmc.py  metrics.py  multichain.py  partition.py  spectral.py  synthetic.py  viz.py
notebooks/: 01_pa_walkthrough.ipynb
output/: run_config.json  run_config_real.json
report/: report.tex
scripts/: analyze.py  build_graph.py  download_data.py  download_mggg_pa.py  download_mggg_states.py  generate_readme_figures.py  run_ensemble.py  run_full_analysis.py  run_mst_md.py  run_mst_nc.py  run_mst_pa.py  run_mst_wi.py  run_real_all_states.py  run_real_pa.py  smoke_test.py
tests/: conftest.py  test_bootstrap.py  test_contiguity.py  test_diagnostics.py  test_graph.py  test_mcmc.py  test_metrics.py  test_multichain.py  test_partition.py  test_spectral.py  test_synthetic.py
